[package]
name = "dezrevellou"
version = "0.1.0"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4", features=["serde"]}
serde = { version="1", features=["derive"]}
serde_json = "1"
warp = "0.3.1"
tokio = {version="1.5.0", features=["full"]}
log = "0.4"
pretty_env_logger = "0.4"